tooling/nargo_cli/tests/snapshots/execution_failure/ecdsa_secp256r1_r_zero/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: 'failed to solve blackbox function: ecdsa_secp256r1, reason: Signature provided for ECDSA verification is zero'
   ┌─ std/ecdsa_secp256r1.nr:10:5
   │
10 │     _verify_signature(public_key_x, public_key_y, signature, message_hash, true)
   │     ----------------------------------------------------------------------------
   │
   = Call stack:
     1. src/main.nr:3:9
     2. std/ecdsa_secp256r1.nr:10:5

Failed assertion
