tooling/nargo_cli/tests/snapshots/execution_failure/ecdsa_secp256r1_r_zero/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: failed to solve blackbox function: ecdsa_secp256r1, reason: Signature provided for ECDSA verification is zero
   ┌─ std/ecdsa_secp256r1.nr:10:5
   │
10 │     _verify_signature(public_key_x, public_key_y, signature, message_hash, true)
   │     ----------------------------------------------------------------------------
   │

Error interpreting main function
